@@ -8,6 +8,7 @@ Generic changes/fixes
 Device specific changes/fixes
 	* OnLineCommander - add initial support
 	* HoTTAdpter2* - add missing property reduction/offset to Temperature Rx
+	* IGCAdapter - fix flight number parsing, parsing F record, record naming
 
 Version 3.4.2 - 04 Aug 2020
 Generic changes/fixes
